edit profil + section commentaire

--- a/WebContent/Inscription.html
+++ b/WebContent/Inscription.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Inscription</title>
-        <link rel="shortcut icon" type="img/png" href="http://localhost:8080/Football/img/flavicon.jpg">
+        <link rel="shortcut icon" type="img/png" href="http://localhost:8080/Football/img/flavicon.png">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <script src="style/bootstrap/js/jquery.min.js"></script>
         <link rel="stylesheet" href="style/bootstrap/css/bootstrap.min.css">
