--- a/WebContent/conditions.html
+++ b/WebContent/conditions.html
@@ -13,37 +13,37 @@
                 <img src="img/foot_logo.jpg"></a>                    
             </div>
         </nav>
-	<div id="wrap">
-		<div id="main" class="container clear-top">
-			    <h1> Conditions Generales d'utilisation : </h1>
-			    <br>
-    			<h3>PAGE EN CONSTRUCTION</h3>
+		<div id="wrap">
+			<div id="main" class="container">
+				    <h1> Conditions Generales d'utilisation : </h1>
+				    <br>
+	    			<h3>PAGE EN CONSTRUCTION</h3>
+			</div>
 		</div>
-	</div>
-	<!--Footer-->
-	<footer>
-		<div class="container-fluid">
-			<div class="container">
-				<div class="row text-center">
-					<div class="col-md-6">
-						<img src="img/foot_logo.jpg">
-						<hr class="light">
-						<p>Paris, France</p>
-					</div>
-					<div class="col-md-6">
-						<hr class="light">
-						<h5>Contactez-nous</h5>
-						<hr class="light">
-						<p>E-mail: football_score@gmail.com</p>
-						<p>Tel: +33 658 087 841</p>
-					</div>
-					<div class="col-12">
-						<hr class="light-100">
-						<h5>&copy; footballscore.com</h5>
+		<!--Footer-->
+		<footer>
+			<div class="container-fluid">
+				<div class="container">
+					<div class="row text-center">
+						<div class="col-md-6">
+							<img src="img/foot_logo.jpg">
+							<hr class="light">
+							<p>Paris, France</p>
+						</div>
+						<div class="col-md-6">
+							<hr class="light">
+							<h5>Contactez-nous</h5>
+							<hr class="light">
+							<p>E-mail: football_score@gmail.com</p>
+							<p>Tel: +33 658 087 841</p>
+						</div>
+						<div class="col-12">
+							<hr class="light-100">
+							<h5>&copy; footballscore.com</h5>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
-</body>
+		</footer>
+	</body>
 </html>
