proper databse update, page de connexion

--- a/WebContent/Inscription.html
+++ b/WebContent/Inscription.html
@@ -54,7 +54,7 @@
                     <div class="hline"></div>
                     <p>
                         Déjà Inscrit? 
-                        <a href="http://localhost:8080/Football/authentification.html">Connexion</a>
+                        <a href="http://localhost:8080/Football/authentification.jsp">Connexion</a>
                     </p>
                 </div>
             </div>
